--- a/CS415FinalProject/Config/DefaultEngine.ini
+++ b/CS415FinalProject/Config/DefaultEngine.ini
@@ -4,16 +4,16 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+EditorStartupMap=/Game/Levels/Level_Main.Level_Main
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+GameDefaultMap=/Game/Levels/Level_Main.Level_Main
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/GM_Main.GM_Main_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
