stuck on setting equiped item correctly

--- a/CS415FinalProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CS415FinalProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1775,4 +1775,19 @@ bDoNotMarkAllInstancesDirtyOnDefaultValueChange=True
 bFavorPureCastNodes=False
 SaveOnCompile=SoC_Never
 bJumpToNodeErrors=False
-bAllowExplicitImpureNodeDisab
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+NodeTemplateCacheCapMB=20.000000
+AllowIndexAllBlueprints=LoadOnly
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+
