Added saving of player stats

--- a/CS415FinalProject/Config/DefaultEngine.ini
+++ b/CS415FinalProject/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 GameDefaultMap=/Game/Levels/Level_Main.Level_Main
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/Blueprints/GM_Main.GM_Main_C
